Modified the index.html file.

--- a/Index.html
+++ b/Index.html
@@ -44,16 +44,16 @@
            </div>
            <div class="navleft">
                <ul>
-                   <li><a class="advertising">Advertising</a></li>
-                   <li><a class="business">Business</a></li>
-                   <li><a class="about">About</a></li>
+                   <li><a class="advertising" href="#">Advertising</a></li>
+                   <li><a class="business" href="#">Business</a></li>
+                   <li><a class="about" href="#">About</a></li>
                </ul>
            </div>
            <div class="navright">
                <ul>
-                   <li><a class="privacy">Privacy</a></li>
-                   <li><a class="terms">Terms</a></li>
-                   <li><a class="settings">Settings</a></li>
+                   <li><a class="privacy" href="#">Privacy</a></li>
+                   <li><a class="terms" href="#">Terms</a></li>
+                   <li><a class="settings" href="#">Settings</a></li>
                </ul>
 
            </div>
